# nfact_idp

./: .gitignore  README.md  pyproject.toml
nfact_id/behavioural/: FA_behavioural.ipynb  data_dictionaries_for_subjects.py
nfact_id/behavioural/sub_ids/: DCAM_id.csv  banda_id.csv  ep_id.csv  pdc_id.csv
nfact_id/component_defintion/: atlas_definitions.ipynb  component_defintion_gemini.py  create_defintion_dataframe.ipynb  diagnostics.ipynb
nfact_id/functions/: behavioural_functions.py  component_def_functions.py  factor_analysis.py  idp_functions.py  modelling_fuc.py  old_functions.py  plotting.py  questionnaire_scoring.py
nfact_id/group_diff/: building_normative_model.ipynb  exploring_differences.ipynb  model_experimentation.ipynb
nfact_id/individualise/: hcp_participants.ipynb  test_retest.ipynb
